--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 <h2>9. Contact Information</h2>
                 <div class="contact-info">
                     <p>If you have any questions about this privacy policy or Neural Puzzle, please contact us:</p>
-                    <p><strong>Email:</strong> veasyty68@gmail.com</p>
+                    <p><strong>Email:</strong> veasnaty68@gmail.com</p>
                     <p><strong>App Store:</strong> Leave a review with your questions</p>
                 </div>
             </div>
